Tune authority infobox layout.

--- a/themes/finna2/less/finna/record.less
+++ b/themes/finna2/less/finna/record.less
@@ -112,10 +112,12 @@
   }
 
   .authority {
-    .fa {
-      vertical-align: middle;
+    .btn {
+      font-size: 0.9em;
+      line-height: 0.1em;
+      margin-left: 0.5em;
     }
-    .authority-info, .fa.hide-info {
+    .authority-info {
       display: none;
     }
 
@@ -124,10 +126,14 @@
       border-bottom: 1px solid gray;
 
       margin: 10px 0;
-      padding: 10px 0 10px 10px;
+      padding: 10px 0 10px 0px;
 
       table {
         margin-bottom: 0;
+        margin-top: 1em;  
+      }
+      .content-btn-holder {
+        text-align: right;
       }
     }
 
