--- a/themes/finna2/templates/RecordDriver/DefaultRecord/authority-link.phtml
+++ b/themes/finna2/templates/RecordDriver/DefaultRecord/authority-link.phtml
@@ -1,9 +1,11 @@
 <?php //Don't add START and END comments ?>
 <div class="authority ajax-content" data-authority="<?=$this->id?>" data-source="<?=$this->recordSource?>" data-type="<?=$this->type?>">
   <a href="<?=$this->url?>">
-    <?=$this->label?><?php if (!empty($this->role)): ?><span class="role">, <?=mb_strtolower($this->transEsc('CreatorRoles::' . $this->role), 'UTF-8') ?></span><?php endif; ?>
-    <i class="show-info fa fa-arrow-down"><span class="sr-only"><?=$this->transEsc('more_info_toggle')?></span></i>
-    <i class="hide-info fa fa-arrow-up"><span class="sr-only"><?=$this->transEsc('more_info_toggle')?></span></i>
+      <?=$this->label?><?php if (!empty($this->role)): ?><span class="role">, <?=mb_strtolower($this->transEsc('CreatorRoles::' . $this->role), 'UTF-8') ?></span><?php endif; ?>
+      <a href="#" class="show-info btn btn-primary"><?=$this->translate('authority_show_info')?></a>
   </a>
-  <div class="authority-info"><i class="fa fa-spin fa-spinner"></i></div>
+  <div class="authority-info">
+      <div class="content"><i class="fa fa-spin fa-spinner"></i></div>
+      <div class="content-btn-holder"><a href="#" class="hide-info btn btn-primary"><?=$this->translate('authority_hide_info')?></a></div>
+  </div>
 </div>
