--- a/themes/finna2/templates/RecordDriver/DefaultRecord/data-authors.phtml
+++ b/themes/finna2/templates/RecordDriver/DefaultRecord/data-authors.phtml
@@ -8,7 +8,7 @@
       $authorityLink = null;
       if (!empty($author['id'])) {
         $authorityLink = $this->authority()->link(
-          $url, $label, $author['id'], $author['type'], $author['role'], $this->driver
+          $url, $label, $author['id'], $author['type'], $this->driver
         );
       }
     ?>
