--- a/themes/finna2/templates/RecordDriver/DefaultRecord/authority-link.phtml
+++ b/themes/finna2/templates/RecordDriver/DefaultRecord/authority-link.phtml
@@ -2,7 +2,7 @@
 <div class="authority ajax-content" data-authority="<?=$this->id?>" data-source="<?=$this->recordSource?>" data-type="<?=$this->type?>">
   <a href="<?=$this->url?>">
       <?=$this->label?>
-      <a href="#" class="show-info btn btn-primary"><?=$this->translate('authority_show_info')?></a>
+      <a href="#" class="show-info"><?=$this->translate('authority_show_info')?></a>
   </a>
   <div class="authority-info">
       <div class="content"><i class="fa fa-spin fa-spinner"></i></div>
