--- a/themes/finna2/less/finna/record.less
+++ b/themes/finna2/less/finna/record.less
@@ -415,6 +415,16 @@ a.authority {
   }
 }
 
+.related-records {
+  margin-bottom: 1em;
+    
+  li.list-group-item p {
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 0;
+  }
+}
+
 #similar-records{
   .details {
     font-size: 0.9em;
