--- a/themes/finna2/less/finna/result-sidebar.less
+++ b/themes/finna2/less/finna/result-sidebar.less
@@ -152,7 +152,8 @@ button.list-group-item {
   margin-top: 1em;
 }
 
-.similar-records {
+.similar-records,
+.related-records {
   .list-group-item {
     border: @sidebar-border;
   }
