--- a/themes/finna2/css/finna.css
+++ b/themes/finna2/css/finna.css
@@ -17526,20 +17526,24 @@ button.list-group-item.title:focus {
 .feedback-record {
   margin-top: 1em;
 }
-.similar-records .list-group-item {
+.similar-records .list-group-item,
+.related-records .list-group-item {
   border: 1px solid #d1d1d1;
 }
-.similar-records .details {
+.similar-records .details,
+.related-records .details {
   color: #2b2b2b;
 }
-.similar-records i {
+.similar-records i,
+.related-records i {
   margin-right: 0;
   font-style: normal;
   top: 0.35em;
   position: relative;
 }
 @media print {
-  .similar-records {
+  .similar-records,
+  .related-records {
     display: none;
   }
 }
@@ -20835,6 +20839,14 @@ a.authority {
   .large-image-sidebar {
     width: 100%;
   }
+}
+.related-records {
+  margin-bottom: 1em;
+}
+.related-records li.list-group-item p {
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 0;
 }
 #similar-records .details {
   font-size: 0.9em;
