--- a/themes/finna2/less/finna/holdings.less
+++ b/themes/finna2/less/finna/holdings.less
@@ -139,7 +139,10 @@
         display: inline-block;
     }
 }
-.record-holdings-table {
+
+.record-holdings-table,
+.record-locationsead3-links,
+.record-locationsead3-table {
     margin: 20px 0px;
     border: 1px solid @gray-lighter;
     border-top: none;
